# pvn-webservice

./: .gitignore  README.md  add_user.sh  launch_postgrest.sh  list_users.sh  pvn-webservice.cabal  setup_postgres.sh  stack.yaml
content/: api.js
src/: Api.hs  Config.hs  Main.hs  Models.hs
